# ld57

./: .gitignore  Cargo.toml  README.md  import-settings.json  resources.db
.github/workflows/: build.yml
game-bin/: Cargo.toml
game-bin/src/: main.rs
game-lib/: Cargo.toml
game-lib/src/: brain.rs  camera.rs  game_object.rs  grid.rs  lib.rs  menu.rs  notifications.rs  pathfinding.rs  tilemap.rs
media/: itch-cover.kra
resources/audio/: soundtrack-01.flac  soundtrack-02.flac  soundtrack-03.flac  soundtrack-04.flac
resources/audio/soundtrack/: soundtrack.bwproject
resources/sprites/: accessory-bowtie.kra  accessory-cap.kra  accessory-paint.kra  accessory-shine.kra  controls.kra  energy-generator.kra  energy.kra  geothermal-vent.kra  goal-haul.kra  goal-oxygen.kra  goal-relax-alt.kra  goal-relax.kra  goal-work.kra  helmet.kra  magma.kra  menu-underscore.kra  menu.kra  menuitem-continue.kra  menuitem-quit.kra  number.kra  occupation-hauler.kra  occupation-idle.kra  occupation-work-at-energy-generator.kra  occupation-work-at-oxygen-generator.kra  oxygen-generator.kra  oxygen.kra  pass.kra  seafloor.kra  slider-handle.kra  suit.kra  wall.kra
resources/web/: index.html
