[package]
name = "game-bin"
version = "0.1.0"
edition = "2024"

[dependencies]
engine = { git = "https://github.com/pcjens/rust-game-engine-prototype", version = "0.1.0" }
game-lib = { version = "0.1.0", path = "../game-lib" }
platform = { git = "https://github.com/pcjens/rust-game-engine-prototype", version = "0.1.0" }
platform-sdl2 = { git = "https://github.com/pcjens/rust-game-engine-prototype", version = "0.1.0" }
