[package]
name = "game-bin"
version = "0.1.0"
edition = "2024"

[dependencies]
engine = { git = "https://github.com/pcjens/rust-game-engine-prototype", version = "0.1.0" }
game-lib = { version = "0.1.0", path = "../game-lib" }
platform = { git = "https://github.com/pcjens/rust-game-engine-prototype", version = "0.1.0" }
platform-sdl2 = { git = "https://github.com/pcjens/rust-game-engine-prototype", version = "0.1.0" }
sdl2 = "*" # just so we can pass features, let platform-sdl2 pick the version

[features]
default = []
sdl-bundled = ["sdl2/bundled"]
sdl-static-link = ["sdl2/static-link"]

[package.metadata.bundle]
name = "Game"
identifier = "moe.neon.ld57"
osx_minimum_system_version = "10.12"
