[package]
name = "game-bin"
version = "0.1.0"
edition = "2024"

[dependencies]
engine = { git = "https://github.com/pcjens/rust-game-engine-prototype", version = "0.1.0" }
game-lib = { version = "0.1.0", path = "../game-lib" }
platform = { git = "https://github.com/pcjens/rust-game-engine-prototype", version = "0.1.0" }
platform-sdl2 = { git = "https://github.com/pcjens/rust-game-engine-prototype", version = "0.1.0" }
sdl2 = "*" # just so we can pass features, let platform-sdl2 pick the version
tracing-subscriber = { version = "0.3.19", optional = true, features = ["fmt", "std"] }

[features]
default = []
sdl-bundled = ["sdl2/bundled"]
sdl-static-link = ["sdl2/static-link"]
sdl-use-vcpkg = ["sdl2/use-vcpkg"]
tracing-subscriber = ["dep:tracing-subscriber"]
embed-resources-db = []

[package.metadata.bundle]
name = "Diving for Oxygen"
identifier = "moe.neon.oxygen"
osx_minimum_system_version = "10.12"

# vcpkg configs for building on windows. The windows runner appears to
# intermittently fail to build SDL when using sdl2/bundled, so here we are.
[package.metadata.vcpkg]
dependencies = ["sdl2"]
git = "https://github.com/microsoft/vcpkg"
rev = "2025.06.13"
[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
